# Implementing-Event-Sourcing-in-Python

./: README.md  pyproject.toml  setup.cfg
features/: event_handling.feature  order_management.feature  postgres_integration.feature
scripts/: create_tables_postgres.sql
src/orders/: __init__.py  main.py
src/orders/adapters/postgres_event_store/: event_store.py  tables.py
src/orders/domain/: event_store.py  events.py  models.py
tests/: test_order_aggregate.py  test_orders.py
tests/acceptance/: test_event_handling.py  test_order_management.py  test_postgres_integration.py
tests/integration/: test_main.py  test_postgres_event_store.py
tests/unit/: test_order_aggregate.py
