[tool.poetry]
name = "Event Sourcing in python"
version = "0.1.0"
description = "Implementing Event Sourcing in Python"
authors = []
license = "MIT"
package-mode = false

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.adapters.dependencies]
sqlalchemy = "^2.0.32"
psycopg2-binary = "^2.9.9"
aiopg = "^1.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
coverage = "^7.5.1"
pytest-cov = "^3.0.0"
pytest-icdiff = "^0.6"
testcontainers = "^4.8.0"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
